Reformated default templates
+ deleted default templates
+ added a new post
+ add favicons

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -18,8 +18,11 @@ search_exclude: true
   }
 </style>
 
-<div class="container">
+<div class="container" style="">
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+</div>
+<div class="404-img">
+  <img src="{{ site.baseurl }}/images/3.svg"/>
 </div>
