deploy: a3a10601be68c736db87ae49d0e46dc3b4d5b453

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://random-programming-stuff.github.io/blog/about/" />
 <meta property="og:site_name" content="Random Programming Stuff" />
 <script type="application/ld+json">
-{"description":"A blog about learning a few tips and tricks of the programming by (re)implementing some random (sometimes useful, sometimes useless) tasks and stuff","@type":"WebSite","headline":"About Me","url":"https://random-programming-stuff.github.io/blog/about/","name":"Random Programming Stuff","@context":"https://schema.org"}</script>
+{"description":"A blog about learning a few tips and tricks of the programming by (re)implementing some random (sometimes useful, sometimes useless) tasks and stuff","@type":"WebSite","url":"https://random-programming-stuff.github.io/blog/about/","name":"Random Programming Stuff","headline":"About Me","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link href = '/blog/assets/css/style.css' rel = "stylesheet"><link type="application/atom+xml" rel="alternate" href="https://random-programming-stuff.github.io/blog/feed.xml" title="Random Programming Stuff" /><link href = '/blog/images/favicon.ico' rel = "shortcut icon" type = "image/x-icon">
 <link href = '/blog/images/apple-touch-icon.png' rel = "apple-touch-icon" sizes = "180x180">
