deploy: 36c936fda01083f3beed6c8c4141dede346aa757

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:site_name" content="Random Programming Stuff" />
 <meta property="og:image" content="https://random-programming-stuff.github.io/blog/images/home-page.jpg" />
 <script type="application/ld+json">
-{"image":"https://random-programming-stuff.github.io/blog/images/home-page.jpg","description":"A blog about learning a few tips and tricks of the programming by (re)implementing some random (sometimes useful, sometimes useless) tasks and stuff","@type":"WebSite","url":"https://random-programming-stuff.github.io/blog/","name":"Random Programming Stuff","headline":"Random Programming Stuff","@context":"https://schema.org"}</script>
+{"headline":"Random Programming Stuff","image":"https://random-programming-stuff.github.io/blog/images/home-page.jpg","description":"A blog about learning a few tips and tricks of the programming by (re)implementing some random (sometimes useful, sometimes useless) tasks and stuff","@type":"WebSite","url":"https://random-programming-stuff.github.io/blog/","name":"Random Programming Stuff","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link href = '/blog/assets/css/style.css' rel = "stylesheet"><link type="application/atom+xml" rel="alternate" href="https://random-programming-stuff.github.io/blog/feed.xml" title="Random Programming Stuff" /><link href = '/blog/images/favicon.ico' rel = "shortcut icon" type = "image/x-icon">
 <link href = '/blog/images/apple-touch-icon.png' rel = "apple-touch-icon" sizes = "180x180">
